@@ -974,6 +974,7 @@ Kalle Svensson
 Paul Swartz
 Thenault Sylvain
 Péter Szabó
+Amir Szekely
 Arfrever Frehtes Taifersar Arahesis
 Geoff Talvola
 William Tanksley
